[package]
name = "rget"
version = "0.2.0"
authors = ["Hardik Jindal"]
description = "A minimal file downloader"
documentation = "https://github.com/mattgathu/duma"
homepage = "https://github.com/mattgathu/duma"
repository = "https://github.com/mattgathu/duma"
readme = "README.md"
keywords = ["http", "client", "cli", "file", "download"]
categories = ["web-programming::http-client", "command-line-utilities", "network-programming"]

[dependencies]
indicatif = "0.15.0"
console = "0.13.0"
clap = "2.33.2"
ftp = "3.0.1"
threadpool = "1.8.1"
failure = { version = "0.1.8", features = [] }
url = "1.7.2"
reqwest = {version = "0.10.8", features = ["blocking"]}

[dev-dependencies]
assert_cmd = "0.11"
tiny_http = "0.6.2"
assert_fs = "0.11"
predicates = "1.0"
